src/Dependencies/libtase2-2.3.0/src/inc/tase2_server.h


typedef enum
{
    TASE2_RESULT_SUCCESS = -1,
    TASE2_RESULT_HARDWARE_FAULT = 1,
    TASE2_RESULT_TEMPORARILY_UNAVAILABLE = 2,
    TASE2_RESULT_OBJECT_ACCESS_DENIED = 3,
    TASE2_RESULT_OBJECT_VALUE_INVALID = 11
} Tase2_HandlerResult;
typedef struct sTase2_SentPointValue* Tase2_SentPointValue;
TASE2_API Tase2_DataPoint
Tase2_SentPointValue_getDataPoint(Tase2_SentPointValue self);
TASE2_API Tase2_PointValue
Tase2_SentPointValue_getPointValue(Tase2_SentPointValue self);
typedef void (*Tase2_ClientConnectionHandler) (void* parameter, const char* clientAddress, Tase2_BilateralTable clientBlt, bool connect);
typedef Tase2_HandlerResult (*Tase2_SelectHandler) (void* parameter, Tase2_ControlPoint controlPoint);
typedef Tase2_HandlerResult (*Tase2_OperateHandlerEx) (void* parameter, Tase2_ControlPoint controlPoint, int16_t cmdDiscreteValue, float realValue);
typedef Tase2_HandlerResult (*Tase2_SetTagHandler) (void* parameter, Tase2_ControlPoint controlPoint, Tase2_TagValue value, const char* reason);
typedef Tase2_HandlerResult (*Tase2_WriteDataHandler) (void* parameter, Tase2_Domain domain, Tase2_DataPoint dataPoint, Tase2_PointValue value);
typedef void (*Tase2_TSCriticalNotConfirmedHandler) (void* parameter, Tase2_TransferSet transferSet, uint64_t timeSent, bool nack);
typedef void (*Tase2_DSTransferSetUpdateHandler) (void* parameter, Tase2_Endpoint_Connection peer, Tase2_BilateralTable clientBlt, Tase2_DSTransferSet transferSet, bool isEnabled);
typedef void (*Tase2_DataSetEventHandler) (void* parameter, bool create, Tase2_Endpoint_Connection peer, Tase2_BilateralTable clientBlt, Tase2_Domain dataSetDomain, char* dataSetName, LinkedList dataPoints);
typedef void (*Tase2_IMTransferSetEventHandler) (void* parameter, Tase2_Endpoint_Connection peer, Tase2_BilateralTable clientBlt, bool enabled);
typedef void (*Tase2_DSTransferSetReportSentHandler) (void* parameter, Tase2_Endpoint_Connection peer, Tase2_BilateralTable clientBlt, Tase2_DSTransferSet transferSet, LinkedList sentDataPoints, Tase2_ReportReason reason);
TASE2_API Tase2_Server
Tase2_Server_create(Tase2_DataModel dataModel, TLSConfiguration tlsConfiguration);
TASE2_API Tase2_Server
Tase2_Server_createEx(Tase2_DataModel dataModel, Tase2_Endpoint endpoint);
TASE2_API Tase2_Endpoint
Tase2_Server_getEndpoint(Tase2_Server self);
TASE2_API void
Tase2_Server_setLocalIpAddress(Tase2_Server self, const char* localIpAddress);
TASE2_API void
Tase2_Server_setTcpPort(Tase2_Server self, int tcpPort);
TASE2_API void
Tase2_Server_setLocalApTitle(Tase2_Server self, const char* apTitle, int aeQualifier);
TASE2_API void
Tase2_Server_setLocalAddresses(Tase2_Server self, Tase2_PSelector pSelector, Tase2_SSelector sSelector, Tase2_TSelector tSelector);
TASE2_API void
Tase2_Server_setSelectTimeout(Tase2_Server self, int timeoutInMs);
TASE2_API void
Tase2_Server_setCriticalReportTimeout(Tase2_Server self, int timeoutInMs);
TASE2_API void
Tase2_Server_setMaxDSTSEventQueueSize(Tase2_Server self, int maxSize);
TASE2_API void
Tase2_Server_addBilateralTable(Tase2_Server self, Tase2_BilateralTable blt);
TASE2_API void
Tase2_Server_setIdentity(Tase2_Server self, char* vendor, char* model, char* revision);
TASE2_API void
Tase2_Server_setSupportedFeatures(Tase2_Server self, int value);
TASE2_API void
Tase2_Server_setClientConnectionHandler(Tase2_Server self, Tase2_ClientConnectionHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setSelectHandler(Tase2_Server self, Tase2_SelectHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setOperateHandlerEx(Tase2_Server self, Tase2_OperateHandlerEx handler, void* parameter);
TASE2_API void
Tase2_Server_setSetTagHandler(Tase2_Server self, Tase2_SetTagHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setWriteDataHandler(Tase2_Server self, Tase2_WriteDataHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setTSCriticalNotConfirmedHandler(Tase2_Server self, Tase2_TSCriticalNotConfirmedHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setDataSetEventHandler(Tase2_Server self, Tase2_DataSetEventHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setDSTransferSetUpdateHandler(Tase2_Server self, Tase2_DSTransferSetUpdateHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setIMTransferSetEventHandler(Tase2_Server self, Tase2_IMTransferSetEventHandler handler, void* parameter);
TASE2_API void
Tase2_Server_setDSTransferSetReportSentHandler(Tase2_Server self, Tase2_DSTransferSetReportSentHandler handler, void* parameter);
TASE2_API bool
Tase2_Server_requestReport(Tase2_Server self, Tase2_DSTransferSet transferSet, Tase2_ReportReason reason, int16_t eventCode);
TASE2_API int
Tase2_Server_sendInformationMessage(Tase2_Server self, Tase2_Domain domain, int32_t infoRef, int32_t localRef, int32_t msgId, int32_t size, uint8_t* buffer);
TASE2_API void
Tase2_Server_start(Tase2_Server self);
TASE2_API void
Tase2_Server_stop(Tase2_Server self);
TASE2_API Tase2_Statistics
Tase2_Server_getStatistics(Tase2_Server self);
TASE2_API bool
Tase2_Server_isRunning(Tase2_Server self);
TASE2_API void
Tase2_Server_updateOnlineValue(Tase2_Server self, Tase2_DataPoint dataPoint);
TASE2_API void
Tase2_Server_updateByOnlineValue(Tase2_Server self, Tase2_DataPoint dataPoint);
TASE2_API void
Tase2_Server_updateOnlineValueNoTrigger(Tase2_Server self, Tase2_DataPoint dataPoint);
TASE2_API void
Tase2_Server_destroy(Tase2_Server self);