src/Dependencies/libtase2-2.3.0/src/inc/tase2_endpoint.h


typedef struct
{
    uint8_t size; 
    uint8_t value[16]; 
} Tase2_TSelector;
typedef struct
{
    uint8_t size; 
    uint8_t value[16]; 
} Tase2_SSelector;
typedef struct
{
    uint8_t size; 
    uint8_t value[16]; 
} Tase2_PSelector;