src/Dependencies/libtase2-2.3.0/jna/src/main/com/libtase2/server/Server.java

package com.libtase2.server;

import java.util.Collection;
import java.util.HashMap;

/*
 *  Copyright 2018, 2019 MZ Automation GmbH
 *
 *  This file is part of libtase2
 */

import java.util.LinkedList;
import java.util.List;
import java.util.Map;

import com.libtase2.common.Endpoint;
import com.libtase2.common.EndpointConnection;
import com.libtase2.common.LibTase2;
import com.libtase2.common.LogLevel;
import com.libtase2.common.PointValue;
import com.libtase2.common.ReportReason;
import com.libtase2.common.TLSConfiguration;
import com.libtase2.common.Tag;
import com.libtase2.common.TagValue;
import com.sun.jna.Callback;
import com.sun.jna.DefaultTypeMapper;
import com.sun.jna.FromNativeContext;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.Structure;
import com.sun.jna.ToNativeContext;
import com.sun.jna.TypeConverter;

/**
 * Represents a TASE.2 server instance
 */
public class Server {

    /* helper class to access library internal Endpoint functions */
    private static class InternalEndpoint extends Endpoint {
        protected static Endpoint getManagedInstance(Pointer ptr) {
            return Endpoint.getManagedInstance(ptr);
        }

        protected InternalEndpoint(Pointer nativeInstance) {
            super(nativeInstance);
        }

        protected static EndpointConnection lookupConnection(Endpoint endpoint, Pointer peer) {
            return Endpoint.lookupConnection(endpoint, peer);
        }
    }

    private interface NativeLibTase2 extends Library {
        NativeLibTase2 INSTANCE = (NativeLibTase2) Native.loadLibrary("tase2", NativeLibTase2.class, getOptions());

        public static class Statistics extends Structure {

            public static class ByValue extends Statistics implements Structure.ByValue {
            }

            public long messagesSent;
            public long messagesRcvd;
            public long errors;

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("messagesSent");
                fieldOrder.add("messagesRcvd");
                fieldOrder.add("errors");

                return fieldOrder;
            }

        }

        public static class Tase2_TSelector extends Structure {

            public static class ByValue extends Tase2_TSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        public static class Tase2_SSelector extends Structure {

            public static class ByValue extends Tase2_SSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        public static class Tase2_PSelector extends Structure {

            public static class ByValue extends Tase2_PSelector implements Structure.ByValue {
            }

            public byte size;
            public byte[] value = new byte[16];

            @Override
            protected List<String> getFieldOrder() {
                List<String> fieldOrder = new LinkedList<String>();

                fieldOrder.add("size");
                fieldOrder.add("value");

                return fieldOrder;
            }

        }

        Pointer Tase2_Server_create(Pointer dataModel, Pointer tlsConfiguration);

        Pointer Tase2_Server_createEx(Pointer dataModel, Pointer endpoint);

        void Tase2_Server_start(Pointer self);

        void Tase2_Server_stop(Pointer self);

        byte Tase2_Server_isRunning(Pointer self);

        Pointer Tase2_Server_getEndpoint(Pointer self);

        void Tase2_Server_setLocalIpAddress(Pointer self, String localIpAddress);

        void Tase2_Server_setLocalApTitle(Pointer self, String apTitle, int aeQualifier);

        void Tase2_Server_setLocalAddresses(Pointer self, Tase2_PSelector pSelector, Tase2_SSelector sSelector,
                Tase2_TSelector tSelector);

        void Tase2_Server_destroy(Pointer self);

        void Tase2_Server_setIdentity(Pointer self, String vendor, String model, String revision);

        byte Tase2_Server_requestReport(Pointer self, Pointer transferSet, int reason, short eventCode);

        void Tase2_Server_setSelectTimeout(Pointer self, int timeoutInMs);

        void Tase2_Server_setTcpPort(Pointer self, int tcpPort);

        void Tase2_Server_setSupportedFeatures(Pointer self, int value);

        void Tase2_Server_setCriticalReportTimeout(Pointer self, int timeoutInMs);

        void Tase2_Server_setMaxDSTSEventQueueSize(Pointer self, int maxSize);

        void Tase2_Server_addBilateralTable(Pointer self, Pointer blt);

        void Tase2_Server_updateOnlineValue(Pointer self, Pointer dataPoint);

        void Tase2_Server_updateOnlineValueNoTrigger(Pointer self, Pointer dataPoint);

        void Tase2_Server_updateByOnlineValue(Pointer self, Pointer dataPoint);

        Statistics.ByValue Tase2_Server_getStatistics(Pointer self);

        interface InternalClientConnectionHandler extends Callback {
            void invoke(Pointer parameter, String peerAddress, Pointer bltPtr, byte connect);
        }

        void Tase2_Server_setClientConnectionHandler(Pointer self, InternalClientConnectionHandler HandlerResult,
                Pointer parameter);

        interface Tase2_SelectHandler extends Callback {
            int invoke(Pointer parameter, Pointer controlPoint);
        }

        void Tase2_Server_setSelectHandler(Pointer self, Tase2_SelectHandler handler, Pointer parameter);

        interface Tase2_OperateHandlerEx extends Callback {
            int invoke(Pointer parameter, Pointer controlPoint, short discreteValue, float realValue);
        }

        void Tase2_Server_setOperateHandlerEx(Pointer self, Tase2_OperateHandlerEx handler, Pointer parameter);

        interface InternalSetTagHandler extends Callback {
            int invoke(Pointer parameter, Pointer controlPoint, int tagValue, String reason);
        }

        void Tase2_Server_setSetTagHandler(Pointer self, InternalSetTagHandler handler, Pointer parameter);

        interface InternalWriteDataHandler extends Callback {
            int invoke(Pointer parameter, Pointer domain, Pointer dataPoint, Pointer pointValue);
        }

        void Tase2_Server_setWriteDataHandler(Pointer self, InternalWriteDataHandler handler, Pointer parameter);

        interface InternalTSCriticalNotConfirmedHandler extends Callback {
            void invoke(Pointer parameter, Pointer transferSet, long timeSent, byte nack);
        }

        interface InternalDSTransferSetUpdateHandler extends Callback {
            void invoke(Pointer parameter, Pointer peer, Pointer clientBlt, Pointer transferSet, boolean isEnabled);
        }

        interface InternalDataSetEventHandler extends Callback {
            void invoke(Pointer parameter, boolean create, Pointer peer, Pointer clientBlt, Pointer dataSetDomain,
                    String dataSetName, Pointer dataPoints);
        }

        interface InternalDSTransferSetReportSentHandler extends Callback {
            void invoke(Pointer parameter, Pointer peer, Pointer clientBlt, Pointer transferSet, Pointer sentDataPoints,
                    int reason);
        }

        interface InternalIMTransferSetEventHandler extends Callback {
            void invoke(Pointer parameter, Pointer peer, Pointer clientblt, boolean enabled);
        }

        void Tase2_Server_setTSCriticalNotConfirmedHandler(Pointer self, InternalTSCriticalNotConfirmedHandler handler,
                Pointer parameter);

        void Tase2_Server_setDSTransferSetUpdateHandler(Pointer self, InternalDSTransferSetUpdateHandler handler,
                Pointer parameter);

        void Tase2_Server_setDataSetEventHandler(Pointer self, InternalDataSetEventHandler handler, Pointer parameter);

        void Tase2_Server_setDSTransferSetReportSentHandler(Pointer self,
                InternalDSTransferSetReportSentHandler handler, Pointer parameter);

        void Tase2_Server_setIMTransferSetEventHandler(Pointer self, InternalIMTransferSetEventHandler handler,
                Pointer parameter);

        void Tase2_Server_sendInformationMessage(Pointer self, Pointer domain, int infoRef, int localRef, int msgId,
                int size, byte[] buffer);

        Pointer LinkedList_create();

        void LinkedList_add(Pointer self, Pointer data);

        Pointer LinkedList_getNext(Pointer self);

        Pointer LinkedList_getData(Pointer self);

        Pointer Tase2_SentPointValue_getDataPoint(Pointer self);

        Pointer Tase2_SentPointValue_getPointValue(Pointer self);
    }

    private static Map<String, ?> getOptions() {
        Map<String, Object> result = new HashMap<String, Object>();

        DefaultTypeMapper typeMapper = new DefaultTypeMapper();

        typeMapper.addTypeConverter(Boolean.class, new TypeConverter() {
            @Override
            public Object fromNative(Object nativeValue, FromNativeContext context) {
                return ((Byte) nativeValue) != 0;
            }

            @Override
            public Class<?> nativeType() {
                return byte.class;
            }

            @Override
            public Object toNative(Object value, ToNativeContext context) {
                if (value.getClass() == Boolean.class) {
                    value = (Boolean) value;
                }
                if ((Boolean) value) {
                    return (byte) 1;
                } else {
                    return 0;
                }
            }
        });

        result.put(Library.OPTION_TYPE_MAPPER, typeMapper);
        return result;
    }

    /*
     * used to store the list of managed bilateral tables. Prevents the garbage
     * collector to remove the managed instance
     */
    private List<BilateralTable> bltList = new LinkedList<BilateralTable>();

    public Pointer self = Pointer.NULL;

    public Endpoint endpoint = null;

    private DataModel dataModel = null;
    private TLSConfiguration tlsConfiguration = null;

    private ClientConnectionHandler clientConnectionHandler = null;
    private Object clientConnectionHandlerParameter = null;

    private DeviceOperationHandler deviceOperationHandler = null;
    private Object deviceOperationHandlerParameter = null;

    private WriteDataHandler writeDataHandler = null;
    private Object writeDataHandlerParameter = null;

    private TSCriticalNotConfirmedHandler criticalReportNotConfirmedHandler = null;
    private Object criticalReportNotConfirmedHandlerParameter = null;

    private DSTransferSetUpdateHandler dsTransferSetUpdateHandler = null;
    private Object dsTransferSetUpdateHandlerParameter = null;

    private DataSetEventHandler dataSetEventHandler = null;
    private Object dataSetEventHandlerParameter = null;

    private DSTransferSetReportSentHandler dsTransferSetReportSentHandler = null;
    private Object dsTransferSetReportSentHandlerParameter = null;

    private IMTransferSetEventHandler imTransferSetEventHandler = null;
    private Object imTransferSetEventHandlerParameter = null;
